# SmartScraper

./: .env.example  .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  test_api.py
.github/workflows/: release.yml
agents/: __init__.py  analyzer.py  generator.py  openai_client.py
browser/: __init__.py  playwright_client.py
sandbox/: __init__.py  executor.py
static/: index.html
tests/: verify_package.py
